IE11: fix CSS grid in Summary (https://github.com/woocommerce/woocommerce-admin/pull/353)
* Fix Summary values not visible with IE11

* Fix Summary grid for IE11

* Move grid position mixin to _mixins file, so it can be used for other elements

* Remove set-grid-positions mixin and improve code understandability

--- a/plugins/woocommerce-admin/client/components/summary/style.scss
+++ b/plugins/woocommerce-admin/client/components/summary/style.scss
@@ -108,11 +108,12 @@ $inner-border: $core-grey-light-500;
 	}
 
 	.woocommerce-summary__item-delta {
-		flex: 0;
+		flex: 0 1 auto;
 		display: flex;
 		flex-wrap: none;
 	}
 
+	&,
 	&.has-one-item,
 	&.has-1-items {
 		grid-template-columns: 1fr;
@@ -252,6 +253,70 @@ $inner-border: $core-grey-light-500;
 			display: inline-block;
 			height: 16px;
 			width: 20px;
+		}
+	}
+}
+
+// IE11 doesn't auto-position grid children, so their position must be set manually
+.has-1-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 1, 1 );
+}
+
+.has-2-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 2, 2 );
+}
+
+.has-3-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 3, 3 );
+}
+
+.has-4-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 4, 4 );
+}
+
+.has-5-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 5, 5 );
+}
+
+.has-6-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 6, 6 );
+
+	@include breakpoint( '<1365px' ) {
+		@include set-grid-item-position( 3, 6 );
+	}
+}
+
+.has-7-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 4, 7 );
+}
+
+.has-8-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 4, 8 );
+}
+
+.has-9-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 5, 9 );
+
+	@include breakpoint( '<1365px' ) {
+		@include set-grid-item-position( 3, 9 );
+	}
+}
+
+.has-10-items .woocommerce-summary__item-container {
+	@include set-grid-item-position( 5, 10 );
+
+	@include breakpoint( '<1365px' ) {
+		@include set-grid-item-position( 4, 10 );
+	}
+}
+
+@include breakpoint( '<1100px' ) {
+	@for $i from 1 through 10 {
+		.woocommerce-summary > .woocommerce-summary__item-container:nth-child(#{$i}) {
+			grid-column-start: 1;
+			grid-column-end: 2;
+			grid-row-start: #{$i};
+			grid-row-end: #{$i+1};
 		}
 	}
 }
